--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -2,15 +2,13 @@
 output: pdf_document
 ---
 
-# Background
-
 An extensive body of literature describes dramatic changes in the rates of health risking behaviors (HRBs) during adolescence [e.g., binge drinking, risky sexual behavior; @centersfordiseasecontrolandprevention2003;@chassin2009;@patrick2011;@stevenson2007;@willoughby2013]. These HRBs lead to what has been called the paradox of adolescence: although this is a period of robust physical health and increased mental ability, both morbidity and mortality increase [@dahl2004]. It can seem perplexing that adolescents engage in these HRBs despite evaluating the probability of uncertain events with accuracy similar to adults [@fischhoff2008], and demonstrating general accuracy (on occasion, somewhat excessive optimism) about the probability of future outcomes [@debruin2007;@fischhoff2000]. These findings become less paradoxical when considered from a functional-developmental perspective in which adolescents increase in sensation and novelty seeking. That is, taking risks, or exploring situations with known or unknown probabilistic outcomes, is an essential part of this developmental stage, perhaps allowing adolescents to build expertise and wisdom about the world they must engage with as adults [@crone2012;@blakemore2014;@romer2017].  
 
 In order to more fully understand this increased propensity for exploration during adolescence, it is crucial to also understand the motives that compel and shape such exploration. That is, differences in sub-domains of motivation will increases or decreases the expected value of various learning opportunities, and thus alter the ways in which adolescents express this exploratory behavior. Examining learning processes directly may be able to provide a window into effects of motivations that influence low level computations such as perception of stimulus salience. A substantial body of research documents broad motivational changes in adolescence as captured by the sensation-seeking construct [@steinberg2008;@harden2011;@zuckerman1978;@ruch2001], but very little work examines adolescent motivation at a finer resolution, and none examines the impact of different motivations on stimulus salience and basic learning processes that have the potential to shape an adolescent's relation to the environment. 
 
 Understanding adolescence as an important period for social development is also necessary for understanding these behavioral and motivational changes [@crone2012;@blakemore2014]. In fact, many focal adolescent health risks are interpersonal in nature [risky sex, drinking and driving with friends, violence; @kann2014]. It is unclear what relative proportions of adolescent exploration are of the social versus nonsocial environments, but it is clear that motivational changes occur in a milieu that shapes and is a target of many of the behaviors adolescent researchers care about. This proposal describes work that starts to lay an empirical foundation for a descriptive and mechanistic conceptualization of changes in adolescent motivated social behavior. The long-term objective of laying this foundation is to illuminate the role of adolescent-developing social motives in health-relevant behaviors and environmental responses.
 
-## Motivations from an Evolutionary Psychology Perspective
+# Motivations from an Evolutionary Psychology Perspective
 
 Two motivational domains appear often in the introductions (and occasionally also in the discussion sections) of research on adolescence: sex and status. With regard to sex, authors often acknowledge that the transition to sexual maturity is a defining biological feature of adolescence, though very little contemporary adolescent research investigates directly the increased motivation to explore and engage in romantic and sexual behavior [@suleiman2017]. Status is studied more directly, with many articles focusing on popularity antecedents [@lafontana2002;@OwensTheymightnot2009;@LiChineseAmericanchildren2012;@rose2004], and consequences [@allen2005;@cillessen2014;@meuwese_friends_2017]. Though there is a long history of research on motivation in psychology, very little contemporary adolescent research situates mate-seeking and status in a broader motivational framework.
 
@@ -22,15 +20,15 @@ The relationship-centric approach of FSM highlights that these motives hypothesi
 
 Literature on risk-taking behavior directly implicates both mate-seeking and status motivation domains in risky sexual behaviors and a variety of potentially status-related health-risking behaviors such as substance use. For example, in a study which assessed perceptions of the sexual-self among adolescents, there was an association between increasing sexually-motivated self-perceptions and various forms of sexual risk-taking [@buzwell1996]. With regard to status, there is some evidence consistent with the idea that adolescents who have high popularity as rated by peers may try to maintain their status through health-risking behaviors [@mayeux2008]. Beyond health-risking behaviors, these motives may also be crucial ingredients in understanding a whole class of risk-taking that is less negatively valued, including but not limited to extending one's social and physical environment beyond one's childhood home [@sercombe2014]. Although the above literature acknowledges motivation, and measures related constructs, mate-seeking and status _motives_ are rarely or never a direct target of measurement. There is a need for research investigating how adolescent learning and exploration is shaped in the presence of stimuli which are motivationally relevant to their developmental stage.
 
-## Status motive
+# Status motive
 
 Status during adolescence has been studied from a variety of perspectives, including perceptions, structure, strategies, and outcomes [@allen2005;@SelfhoutEmergingLateAdolescent2010;@lafontana2010;@jarvinen_adolescents_1996;@underwood1996;@savin-williams1979]. Though status motives have been addressed, self-report about status priorities are most common. For example, using self-report measures, @lafontana2010 found that prioritizing status over other domains (e.g., achievement, friendship) peaks in late adolescence. However, reliance on self-report is not optimal, especially in a domain with strong social norms about the value of attaining high status. Moreover, self-report may not be able to distinguish between the intrinsic motive to learn about and navigate status hierarchies, and the ability (or lack thereof) to successfully actualize that motive. One interesting possibility is that status motives are constant throughout early life but that during adolescent development, social cognition matures to a degree that allows increasing social status complexity (which appears as a reorientation toward peer status concerns). Nonetheless, as adolescents proceed developmentally toward adulthood, social status plays an increasingly important role in determining many types of opportunities. For this reason, the motivation to explore and master status hierarchies, and perhaps gain status, remains an important target for research.
 
-## Mate-seeking motive
+# Mate-seeking motive
 
 Puberty marks the beginning of sexual maturation of an individual, and the beginning of the adolescent developmental period [@susman_puberty_2009]. Though there has been extensive research on the importance of romantic and sexual relationships during adolescence, peer and parent influences, risky patterns of sexual behavior, and health-relevant outcomes [@schalet2011;@suleiman2015;@capaldi_heterosexual_2002], there has been very little research on sexual development as it relates to motivation. Indeed, while the study of risky sexual behavior is clearly important, there is so little research on the normative aspects of sexual development during adolescence (for example as a developmentally appropriate motivation) that a recent review called it "the 'elephant in the room' of adolescent ... development" [@suleiman2017]. Most work to date has focused on risk factors for unsafe sex unrelated to motivation [e.g., poverty, peer influence, parental monitoring; james2012;@santelli1992;@carlson2014]. This neglects the importance of sexual motivation (i.e., desire) in the development of an empowered and responsible sexual identity, impeding efforts to reduce health-risks through sexual education [@fine2006]. Although sexual desire is recognized rhetorically as an important component in emerging adolescent romantic and sexual behavior, its direct interrogation through either behavioral or self report measures is limited. Likewise, the role of mate-seeking motives in the exploratory behavior characteristic of adolescence is also under-studied.
 
-## Reinforcement learning
+# Reinforcement learning
 
 As noted above, research on status and mate-seeking motives during adolescence is either largely absent, or reliant on self-report. The field would benefit greatly from a new measure that provides an alternative method to capture individual and developmental differences in the salience of these motives across the transition from childhood through adolescence and into adulthood. A primary focus of this dissertation is the design and validation of a new behavioral measure to do so. The measure described below experimentally manipulates motivational domain-relevant cues during reinforcement learning. The basic reinforcement learning paradigm has been well described in both humans and rodents in the behavioral economics literature [@collins_how_2012;@glimcher2009;@jones2011a]. The salience of stimuli in such a paradigm directly impacts learning rates [@cunningham2012]. The premise of this new measure is that linking a stimulus to motivationally relevant information will affect the salience of that stimulus in proportion to the strength of the motivation. By measuring how learning rates are potentiated by this motivational framing, it may be possible to measure a low-level behavioral indicator of status and mate-seeking motives. Moreover, this would demonstrate that status and mate-seeking motives directly affect reinforcement learning, and so, perhaps, shape exploratory behavior postulated to be a primary task of this developmental period.
 
@@ -52,5 +50,5 @@ Motivations have been under-studied in efforts to understand changes in behavior
 
 *Aim 3b: Is there agreement between close others and the self in perceptions of fundamental social motives?* Reports from informants with varying relationships to the target participant will allow exploration of the predicted importance of relationships to the motivations investigated here. If motives are evolved responses to challenges arising from specific social relations, then actors in those relationship roles should be in the ideal position to both perceive and express those motives. Differences in consensus by relationship type will help corroborate the FSM approach to the structure of motivation.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NDQwNjQxMV19
+eyJoaXN0b3J5IjpbLTEzMTMwNTc4NjQsLTE0NDQwNjQxMV19
 -->
